<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.zangfengshun.inventoryapp.AddProductActivity">
    <TextView
        style="@style/TextStyleInListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_name" />
    <EditText
        android:id="@+id/name_add_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hint_name"
        />
    <TextView
        style="@style/TextStyleInListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_price" />
    <EditText
        android:id="@+id/price_add_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/hint_price"
        />
    <TextView
        style="@style/TextStyleInListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_current_quantity" />
    <EditText
        android:id="@+id/current_quantity_add_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hint_current_quantity"
        />
    <TextView
        style="@style/TextStyleInListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_sale_quantity" />
    <EditText
        android:id="@+id/sale_quantity_add_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hint_sale_quantity"
        />
    <TextView
        style="@style/TextStyleInListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_supplier_email" />
    <EditText
        android:id="@+id/supplier_email_add_product"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        />
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button_add_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/button_add_image"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button_addProductIntoDB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/button_add_into_db"/>
    </LinearLayout>
</LinearLayout>
