<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zangfengshun.inventoryapp.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextStyleInListView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_name" />
            <TextView
                android:id="@+id/name_detail"
                style="@style/FigureStyleInListView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/TextStyleInListView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_price" />
            <TextView
                android:id="@+id/price_detail"
                style="@style/FigureStyleInListView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/TextStyleInListView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_current_quantity" />
            <TextView
                android:id="@+id/current_quantity_detail"
                style="@style/FigureStyleInListView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/TextStyleInListView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_sale_quantity" />
            <TextView
                android:id="@+id/sale_quantity_detail"
                style="@style/FigureStyleInListView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/TextStyleInListView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_quantity_modify" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/button_subtract"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_subtract"/>
                <Button
                    android:id="@+id/button_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_add"/>

            </LinearLayout>

        </LinearLayout>


        <ImageView
            android:id="@+id/imageView_product"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/activity_horizontal_margin"

            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_order" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_delete" />
    </LinearLayout>

</RelativeLayout>
